--- a/src/main/resources/assets/guarding/lang/en_us.json
+++ b/src/main/resources/assets/guarding/lang/en_us.json
@@ -1,19 +1,21 @@
 {
-    "item.guarding.netherite_shield": "Netherite Shield",
+    "advancements.guarding.nether.on_guard": "On Guard!",
+    "advancements.guarding.nether.on_guard.desc": "Use a Netherite Ingot to upgrade a Shield.",
+    "advancements.guarding.story.parry_this_you_casual": "Parry This, You Casual!",
+    "advancements.guarding.story.parry_this_you_casual.desc": "Kill an enemy by parrying their own Arrow",
+    "advancements.guarding.story.symbolic_shield": "Symbolic Shield",
+    "advancements.guarding.story.symbolic_shield.desc": "Decorate a Shield with a Banner",
+
     "enchantment.guarding.barbed": "Barbed",
+    "enchantment.guarding.barbed.desc": "Causes damage to enemies attacking you while blocking.",
     "enchantment.guarding.pummeling": "Pummeling",
-    "enchantment.guarding.barbed.description": "Applies thorns to the shield",
-    "enchantment.guarding.pummeling.description": "Increases parry knockback",
+    "enchantment.guarding.pummeling.desc": "Increases the knockback strength of a parry.",
+
+    "item.guarding.netherite_shield": "Netherite Shield",
+
     "subtitle.guarding.item.shield.parry": "Shield parries",
     "subtitle.guarding.item.netherite_shield.block": "Shield blocks",
     "subtitle.guarding.item.netherite_shield.break": "Shield breaks",
     "subtitle.guarding.item.netherite_shield.parry": "Shield parries",
-    "subtitle.guarding.item.netherite_shield.equip": "Gear equips",
-
-    "advancements.guarding.story.decorate_shield_with_banner.title": "Stylish Shield!",
-    "advancements.guarding.story.decorate_shield_with_banner.desc": "Decorate a shield with a banner.",
-    "advancements.guarding.story.kill_mob_with_own_arrow.title": "Parry This, You Casual!",
-    "advancements.guarding.story.kill_mob_with_own_arrow.desc": "Kill a Skeleton or Pillager by parrying their own arrow.",
-    "advancements.guarding.nether.obtain_netherite_shield.title": "On Guard!",
-    "advancements.guarding.nether.obtain_netherite_shield.desc": "Use a Netherite Ingot to upgrade a shield."
+    "subtitle.guarding.item.netherite_shield.equip": "Gear equips"
 }
