--- a/src/main/resources/assets/guarding/lang/uk_ua.json
+++ b/src/main/resources/assets/guarding/lang/uk_ua.json
@@ -1,20 +1,21 @@
 {
-  "enchantment.guarding.barbed": "Колючки",
-  "enchantment.guarding.barbed.desc": "У разі успішного парирування щит завдасть шкоди нападнику.",
-  "enchantment.guarding.pummeling": "Розбивання",
-  "enchantment.guarding.pummeling.desc": "При успішному парируванні щит відкидає нападника назад.",
-  "item.guarding.netherite_shield": "Незеритовий щит",
-  "subtitle.guarding.item.shield.parry": "Парирування щитом",
-  "subtitle.guarding.item.netherite_shield.block": "Блокування щитом",
-  "subtitle.guarding.item.netherite_shield.break": "Зломався шит",
-  "subtitle.guarding.item.netherite_shield.parry": "Парирування щитом",
-  "subtitle.guarding.item.netherite_shield.equip": "Остащення щита",
-  "advancements.guarding.nether.on_guard": "On Guard!",
-  "advancements.guarding.nether.on_guard.desc": "Use a Netherite Ingot to upgrade a Shield.",
-  "advancements.guarding.story.parry_this_you_casual": "Parry This, You Casual!",
-  "advancements.guarding.story.parry_this_you_casual.desc": "Kill an enemy by parrying their own Arrow",
-  "advancements.guarding.story.symbolic_shield": "Symbolic Shield",
-  "advancements.guarding.story.symbolic_shield.desc": "Decorate a Shield with a Banner",
-  "enchantment.guarding.barbed.desc": "Causes damage to enemies attacking you while blocking.",
-  "enchantment.guarding.pummeling.desc": "Increases the knockback strength of a parry."
+    "advancements.guarding.nether.on_guard": "На сторожі!",
+    "advancements.guarding.nether.on_guard.desc": "Використайте незеритовий злиток, щоб покращити щит.",
+    "advancements.guarding.story.parry_this_you_casual": "Спробуй парирувати це, новачку!",
+    "advancements.guarding.story.parry_this_you_casual.desc": "Здолайте ворога парирувавши їх власну стрілу.",
+    "advancements.guarding.story.symbolic_shield": "Символічний щит",
+    "advancements.guarding.story.symbolic_shield.desc": "Прикрасьте щит, за допомогою стяга",
+
+    "enchantment.guarding.barbed": "Колючки",
+    "enchantment.guarding.barbed.desc": "Коли ви блокуєте, завдає шкоди ворогу, що атакує вас.",
+    "enchantment.guarding.pummeling": "Відбиття",
+    "enchantment.guarding.pummeling.desc": "Збільшує силу відкидання від парирування.",
+
+    "item.guarding.netherite_shield": "Незеритовий щит",
+
+    "subtitle.guarding.item.shield.parry": "Щит парирує",
+    "subtitle.guarding.item.netherite_shield.block": "Щит блокує",
+    "subtitle.guarding.item.netherite_shield.break": "Предмет ламається",
+    "subtitle.guarding.item.netherite_shield.parry": "Щит парирує",
+    "subtitle.guarding.item.netherite_shield.equip": "Споряджання обладунками"
 }
