Finish spanish translations

--- a/src/main/resources/assets/guarding/lang/es_mx.json
+++ b/src/main/resources/assets/guarding/lang/es_mx.json
@@ -6,7 +6,7 @@
     "advancements.guarding.story.symbolic_shield": "Escudo simbólico",
     "advancements.guarding.story.symbolic_shield.desc": "Decora un escudo con un estandarte",
     "enchantment.guarding.barbed": "Púas",
-    "enchantment.guarding.barbed.desc": "Causes damage to enemies attacking you while blocking.",
+    "enchantment.guarding.barbed.desc": "Causa daño a los enemigos cuando te atacan mientras estás bloqueando.",
     "enchantment.guarding.pummeling": "Apalear",
     "enchantment.guarding.pummeling.desc": "Aumenta la fuerza de empuje de un bloqueo perfecto.",
     "item.guarding.netherite_shield": "Escudo de netherita",
